# SpecTree

./: FS  FS.json  README.md  export.md  main.py  pyproject.toml
ProjectSpecs/: Specs.md  Specs.typ  add_001_multi_instance_locking.md  add_002_dragdrop_single_instance.md  add_003_tree_context_menu.md  add_004_shortkeys_freemind_jupyter.md  add_004_shortkeys_navigation.md  add_005_icons_and_highlighting.md  add_005b_editor_field_highlighting.md  changes.md  feature_prompt_005b.txt  feature_prompt_add_001.txt  feature_prompt_add_003.txt  feature_prompt_add_004_2.txt  feature_prompt_add_005.txt  prompt.md  shortkeys.md
app/: ui_mainwindow.py
domain/: command_manager.py  commands.py  export_md.py  file_lock.py  model.py  persistence.py  transform.py
spectree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_commands_undo_redo.py  test_dragdrop_single_instance.py  test_export_deterministic.py  test_icons_and_highlighting_intent.py  test_model_ops.py  test_multi_instance_locking.py  test_shortkeys_navigation_intent.py  test_transform_flatten_expand.py  test_ui_dragdrop_intent_only.py
